--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <p>Not every gamer wants to download huge installers or deal with complex emulator setups. Y9FreeGames understands this deeply. Every game on the platform is playable instantly — no download required, no registration barriers. Whether you're at school, on a work break, or relaxing on your couch with your phone, the games load fast and perform smoothly.</p>
 
   <h2>Friday Night Funkin’ Mods: One of the Best Collections Online</h2>
-  <p>The FNF community has exploded with creativity in recent years, and <a href="https://y9freegames.bitbucket.io/">Y9FreeGames<a/> has responded by curating one of the largest playable mod collections online. This includes hard-to-find fan mods like Sprunki Phase 4, VS Chara Fan Remake, and Ourple Guy. The key benefit? They’re all precompiled and run flawlessly in-browser, which removes the friction most fans encounter on other sites.</p>
+  <p>The FNF community has exploded with creativity in recent years, and <a href="https://y9freegames.bitbucket.io/">Y9FreeGames</a> has responded by curating one of the largest playable mod collections online. This includes hard-to-find fan mods like Sprunki Phase 4, VS Chara Fan Remake, and Ourple Guy. The key benefit? They’re all precompiled and run flawlessly in-browser, which removes the friction most fans encounter on other sites.</p>
 
   <h2>Pokémon ROM Hacks for Everyone</h2>
   <p>One of the most visited sections of the website is dedicated to Pokémon ROM hacks. These aren't just GBA ports — they're enhanced and modernized versions designed to run on today’s browsers. You’ll find classics like Pokémon Glazed, Dark Rising, Snakewood, and Gaia. The entire category is built for fans who want nostalgic gameplay with a new twist, and everything works without an emulator.</p>
@@ -75,7 +75,7 @@
   <h2>Why Gamers Trust It</h2>
   <p>Gamers today want more than just flashy UI and broken promises. They want reliability. They want games that load fast, run well, and don’t gate progress behind unnecessary steps. Y9FreeGames gets that. The platform's focus on speed, simplicity, and genuine game selection has helped it rise above competitors who clutter the experience with irrelevant overlays and pay-to-play mechanics.</p>
 
-  <h2>Final Thoughts</h2>
+  <h2>Conclusion</h2>
   <p>If you're searching for a true browser-based platform where mods, retro titles, and casual games live side-by-side in harmony — without logins or downloads — Y9FreeGames is the answer. It doesn’t pretend to be a triple-A portal, but what it offers is something most big names have forgotten: a seamless gaming experience, available to anyone, anytime.</p>
 
   <p>Whether you’re a returning visitor or just hearing the name for the first time, now is the perfect moment to explore what the Y9FreeGames library has to offer.</p>
